--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "formulaic"]
+	path = formulaic
+	url = https://github.com/dachosen1/formulaic
+	shallow = true
+	registered = true
